# AI-coding-agent

./: main.py  pyproject.toml  test.html
agents/: graph.py  prompts.py  states.py  tools.py
agents/generated_project/: README.md  app.js  index.html  script.js  styles.css
ai-front/: .gitignore  package-lock.json  package.json
ai-front/public/: index.html
ai-front/src/: App.css  App.js  api.js
